# android_platform_select_poc

./: BUILD  MODULE.bazel
